add class clicked when start project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
   <div class="buttons">
-    <button id="yellow"></button>
+    <button id="yellow" class="clicked"></button>
     <button id="green"></button>
     <button id="blue"></button>
   </div>
